Stop using deprecated `newInstance`
`Class<?>::newInstance` was deprecated starting in Java 9, let's stop
using it.