@@ -19,6 +19,7 @@
  */
 package org.neo4j.codegen;
 
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 
 public class ClassHandle extends TypeReference
@@ -47,9 +48,11 @@ public class ClassHandle extends TypeReference
         return simpleName().hashCode();
     }
 
-    public Object newInstance() throws CompilationFailureException, IllegalAccessException, InstantiationException
+    public Object newInstance()
+            throws CompilationFailureException, IllegalAccessException, InstantiationException, NoSuchMethodException,
+            InvocationTargetException
     {
-        return loadClass().newInstance();
+        return loadClass().getConstructor().newInstance();
     }
 
     public Class<?> loadClass() throws CompilationFailureException
